dnl
dnl $Id$
dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(apigen, 1.2beta)

dnl Add current dir to searchpath
ACLOCAL="${ACLOCAL} -I ."

dnl Our own version of libdir whose value is set dynamically
AC_SUBST(INSTLIBDIR)
INSTLIBDIR="$libdir"

AC_REQUIRE([AC_PROG_CC])

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

dnl {{{ Ranlib stuff

AC_PROG_RANLIB
AR=ar
AC_SUBST(AR)

dnl }}}

dnl {{{ Handle --with-aterm

AC_PACKAGE_REQUIRE(aterm, baffle,
	[  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

ATERMINC="${ATERM}/include"
AC_SUBST(ATERMINC)

ATERMLIB="${ATERM}/lib"
AC_SUBST(ATERMLIB)

ATERMBIN="${ATERM}/bin"
AC_SUBST(ATERMBIN)

dnl }}}
dnl {{{ Handle --with-asc-support

AC_PACKAGE_REQUIRE(asc-support, asc-support-config,
	[  --with-asc-support=DIR  asc-support is in DIR])

ASCINC=${ASC_SUPPORT}/include
AC_SUBST(ASCINC)

ASCLIB=${ASC_SUPPORT}/lib
AC_SUBST(ASCLIB)

dnl }}}
dnl {{{ Handle --with-pgen

AC_PACKAGE_REQUIRE(pgen, sdf2table,
	[  --with-pgen=DIR         pgen is in DIR (developers only)])
AC_SUBST(PGEN)

PGENBIN=${PGEN}/bin
AC_SUBST(PGENBIN)

dnl }}}
dnl {{{ Handle --with-pt-support
 
AC_PACKAGE_REQUIRE(pt-support, unparsePT,
      [  --with-pt-support=DIR   ParseTree is in DIR])
AC_SUBST(PT_SUPPORT)
 
dnl PTINC=${PT_SUPPORT}/include
dnl AC_SUBST(PTINC)
dnl 
dnl PTLIB=${PT_SUPPORT}/lib
dnl AC_SUBST(PTLIB)
 
PTBIN=${PT_SUPPORT}/bin
AC_SUBST(PTBIN)
 
dnl }}}
dnl {{{ Handle --with-asf-support

AC_PACKAGE_REQUIRE(asf-support, asf-support-config,
	[  --with-asf-support=DIR  asf-support is in DIR])
AC_SUBST(ASF_SUPPORT)

dnl }}}
dnl {{{ Handle --with-sglr

AC_PACKAGE_REQUIRE(sglr, sglr,
	[  --with-sglr=DIR         sglr is in DIR])
AC_SUBST(SGLR)

SGLRBIN=${SGLR}/bin
AC_SUBST(SGLRBIN)

dnl }}}
dnl {{{ Handle --with-asfe

AC_PACKAGE_REQUIRE(asfe, asfe,
	[  --with-asfe=DIR         asf-evaluator is in DIR])
AC_SUBST(ASFE)

ASFBIN=${ASFE}/bin
AC_SUBST(ASFBIN)

dnl }}}
dnl {{{ Handle --with-cflags

AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)


dnl }}}

dnl {{{ Output files

dnl Which files need updating?
AC_OUTPUT(
Makefile
spec/Makefile
utils/Makefile
utils/sdf2-to-adt
utils/adt-to-c
utils/adt-to-java
apigen/Makefile
apigen/c/Makefile
apigen/java/Makefile
test/Makefile
doc/Makefile
doc/paper/Makefile
spec/add-labels/Makefile
,
chmod +x utils/sdf2-to-adt utils/adt-to-c utils/adt-to-java
)

dnl }}}
