dnl
dnl $Id$
dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(apigen, 1.6)
AC_PREREQ(2.13)

dnl Add current dir to searchpath
ACLOCAL="${ACLOCAL} -I ."

dnl Our own version of libdir whose value is set dynamically
AC_SUBST(INSTLIBDIR)
INSTLIBDIR="$libdir"

AC_REQUIRE([AC_PROG_CC])

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

dnl {{{ Ranlib stuff

AC_PROG_RANLIB
AR=ar
AC_SUBST(AR)

dnl }}}

dnl {{{ Handle --with-aterm

AC_PACKAGE_REQUIRE(aterm, baffle,
	[  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

ATERMINC="${ATERM}/include"
AC_SUBST(ATERMINC)
ATERMLIB="${ATERM}/lib"
AC_SUBST(ATERMLIB)
ATERMBIN="${ATERM}/bin"
AC_SUBST(ATERMBIN)

dnl }}}
dnl {{{ Handle --with-aterm-java

AC_PACKAGE_REQUIRE(aterm-java, aterm-java-config,
	[  --with-aterm-java=DIR  ATerm-Java-library is in DIR])
JAVA_ATERM=`${ATERM_JAVA}/bin/aterm-java-config`
AC_SUBST(JAVA_ATERM)
dnl }}}
dnl {{{ Handle --with-cflags

AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)


dnl }}}

EXTERNAL_JARS=${JAVA_ATERM}
AC_SUBST(EXTERNAL_JARS)

dnl {{{ Output files

dnl Which files need updating?
AC_OUTPUT(
Makefile
lib/Makefile
utils/Makefile
utils/adt-to-c
utils/adt-to-java
apigen/Makefile
apigen/adt/Makefile
apigen/gen/Makefile
apigen/gen/tom/Makefile
apigen/gen/c/Makefile
apigen/gen/java/Makefile
test/Makefile
doc/Makefile
doc/paper/Makefile
,
chmod +x utils/adt-to-c utils/adt-to-java
)

dnl }}}
