dnl $Id$

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(aterm-java, 1.2beta)
AC_PREREQ(2.13)

dnl Let aclocal use macros in ./config directory
ACLOCAL="${ACLOCAL} -I ./config"

AC_SET_MAKE

AC_PACKAGE_REQUIRE(shared-objects, shared-objects-config,
   [ --with-shared-objects=DIR       installation directory of shared-objects])
SHARED_OBJECTS="${SHARED_OBJECTS}/share/shared-objects-1.1.jar"
AC_SUBST(SHARED_OBJECTS)

AC_OUTPUT(
  Makefile
  aterm/Makefile
  aterm/pure/Makefile
  test/Makefile
  config/Makefile
)
