dnl $Id$

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(aterm-java, 1.3)
AC_PREREQ(2.13)

dnl Let aclocal use macros in ./config directory
ACLOCAL="${ACLOCAL} -I ./config"

AC_SET_MAKE

AC_PACKAGE_REQUIRE(shared-objects, shared-objects-config,
   [ --with-shared-objects=DIR       installation directory of shared-objects])
SHARED_OBJECTS=\`${SHARED_OBJECTS}/bin/shared-objects-config\`

AC_PACKAGE_REQUIRE(JJTraveler, jjtraveler-config,
   [ --with-JJTraveler=DIR       installation directory of JJTraveler])
JJTRAVELER=\`${JJTRAVELER}/bin/jjtraveler-config\`

EXTERNAL_JARS=${SHARED_OBJECTS}:${JJTRAVELER}

AC_SUBST(EXTERNAL_JARS)

AC_OUTPUT(
  Makefile
  aterm/Makefile
  aterm/pure/Makefile
  test/Makefile
  config/Makefile
)
