dnl $Id$

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
GLT_INIT_PACKAGE
AC_PREREQ(2.59)

AC_PROG_MAKE_SET([])

AC_PACKAGE_REQUIRE(shared-objects, shared-objects-config,
   [ --with-shared-objects=DIR       installation directory of shared-objects])
SHARED_OBJECTS=\`${SHARED_OBJECTS}/bin/shared-objects-config\`

AC_PACKAGE_REQUIRE(JJTraveler, jjtraveler-config,
   [ --with-JJTraveler=DIR       installation directory of JJTraveler])
JJTRAVELER=\`${JJTRAVELER}/bin/jjtraveler-config\`

EXTERNAL_JARS=${SHARED_OBJECTS}:${JJTRAVELER}

AC_SUBST(EXTERNAL_JARS)

AC_CONFIG_FILES([Makefile
  aterm/Makefile
  aterm/pure/Makefile
  test/Makefile
  config/Makefile
])
AC_OUTPUT
