dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(aterm-xml, 0.1)

ACLOCAL="${ACLOCAL} -I ."

dnl Which compiler to use?
AC_REQUIRE([AC_PROG_CC])
AC_PROG_CC

dnl Handle --with-cflags option
AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl Check for required packages and perform version check when needed.

dnl Require ATerm library
AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl Require Xml library
AC_PACKAGE_REQUIRE(xml, xml-config,
   [  --with-xml=DIR          XML library is in DIR])
XMLLIB=`${XML}/bin/xml2-config --libs`
XMLINCLUDE=`${XML}/bin/xml2-config --cflags`
AC_SUBST(XML)
AC_SUBST(XMLLIB)
AC_SUBST(XMLINCLUDE)

dnl Is ranlib needed on this system?
AC_PROG_RANLIB
AC_PATH_PROG(AR,ar,/usr/bin/ar)

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

dnl Which files need updating?
AC_OUTPUT(
  Makefile
  config/Makefile
  aterm2xml/Makefile
  xml2aterm/Makefile
  test/Makefile
)
