dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([configure.in])
GLT_INIT_PACKAGE
AC_PREREQ(2.59)

AC_AIX
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Handle --with-cflags option
AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl Check for required packages and perform version check when needed.

dnl Require ATerm library
AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl Require Xml library
AC_PACKAGE_REQUIRE(libxml2, xml2-config,
   [  --with-libxml2=DIR          XML library is in DIR])
XML="${LIBXML2}"
XMLCFG="${XML}/bin/xml2-config"
dnl To be able to bundle this package with the sources of libxml2, we
dnl delay calling xml2-config until build time using the single quotes
dnl around the backticks.
XMLLIB='`${XMLCFG} --libs`'
XMLINCLUDE='`${XMLCFG} --cflags`/libxml `${XMLCFG} --cflags`'
AC_SUBST(LIBXML2)
AC_SUBST(XML)
AC_SUBST(XMLLIB)
AC_SUBST(XMLCFG)
AC_SUBST(XMLINCLUDE)

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_PROG_MAKE_SET([])

dnl Which files need updating?
AC_CONFIG_FILES([Makefile
  config/Makefile
  aterm2xml/Makefile
  xml2aterm/Makefile
  test/Makefile
])
AC_OUTPUT
