# $Id$

m4_include(float-order.m4)

m4_pattern_forbid([^META_])

AC_INIT
AC_CANONICAL_TARGET([])
META_SETUP
META_C_SETUP
AC_PROG_LIBTOOL

CURDATE=`date`
AC_SUBST([CURDATE])

AC_C_BIGENDIAN
AX_C_FLOAT_WORD_ORDER_BIG

AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([lrand48 srand48])

AC_CONFIG_FILES([aterm.spec])

AC_OUTPUT
