dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl $Id$

AC_INIT(Makefile.in)
AM_INIT_AUTOMAKE(aterm, 1.5.3)

dnl Default values
CC_GCC=gcc
CFLAGS_GCC="-Wall -O4"
LFLAGS_GCC=""
DEFS_GCC="\$(DEFS) -DNDEBUG"
INCL_GCC=""

CC_CC=cc
CFLAGS_CC="-O"
LFLAGS_CC=""
DEFS_CC="\$(DEFS) -DNDEBUG"
INCL_CC=""

CC_DBG=gcc
CFLAGS_DBG="-Wall -g"
LFLAGS_DBG="-g"
DEFS_DBG="\$(DEFS)"
INCL_DBG=""

CC_PROF=gcc
CFLAGS_PROF="-Wall -pg"
LFLAGS_PROF="-pg"
DEFS_PROF="\$(DEFS)"
INCL_PROF=""

CC_CC64=cc
CFLAGS_CC64="-64 -DAT_64BIT"
LFLAGS_CC64="-64"
INCL_CC64=""

CC_SHARED=gcc
CFLAGS_SHARED="-Wall"
LFLAGS_SHARED=""
DEFS_SHARED="\$(DEFS)"
INCL_SHARED=""

AC_PROG_CC

CURDATE=`date`

AC_PROG_RANLIB
AR=ar
AC_SUBST(AR)

AC_AIX

AC_SET_MAKE

AC_ARG_WITH(toolbus, 
   [  --with-toolbus           Specify location of the ToolBus (developers only)], 
   TOOLBUS=$withval)

if test "a${TOOLBUS}" = "a"; then
 dnl Try to find the location of the toolbus
 AC_CHECK_PROG(TOOLBUS,toolbus,toolbus,false)
 if test ${TOOLBUS} = "false" 
 then
   #echo "Warning: toolbus not found. You might need it when developing the ATerm library." >&2
   TOOLBUS="true"
 fi
fi

AC_ARG_WITH(gcc,
   [  --with-gcc               create gcc version (libATerm-gcc.a)],
      ATERM_LIB_GCC=libATerm-gcc.a
      TOOLBUS_LIB_GCC=libATB-gcc.a,)

AC_ARG_WITH(cc,
   [  --with-cc                create cc version (libATerm-cc.a)],
      ATERM_LIB_CC=libATerm-cc.a
      TOOLBUS_LIB_CC=libATB-cc.a,)

AC_ARG_WITH(dbg,
   [  --with-dbg               create debug version (libATerm-dbg.a)],
      ATERM_LIB_DBG=libATerm-dbg.a
      TOOLBUS_LIB_DBG=libATB-dbg.a,)

AC_ARG_WITH(prof,
   [  --with-prof              create profiling version (libATerm-prof.a)],
      ATERM_LIB_PROF=libATerm-prof.a
      TOOLBUS_LIB_PROF=libATB-prof.a,)


#AC_ARG_WITH(shared,
#   [  --with-shared         create a shared-library version (libATerm-shared.so.${VERSION})],
#      ATERM_LIB_SHARED=libATerm-shared.so.${VERSION}
#      TOOLBUS_LIB_SHARED=libATB-shared.so.${VERSION},)

AC_ARG_WITH(all,
   [  --with-all               convenience alias for --with-{gcc,cc,dbg,prof} ],
      ATERM_LIB_GCC=libATerm-gcc.a
      TOOLBUS_LIB_GCC=libATB-gcc.a
      ATERM_LIB_CC=libATerm-cc.a
      TOOLBUS_LIB_CC=libATB-cc.a
      ATERM_LIB_DBG=libATerm-dbg.a
      TOOLBUS_LIB_DBG=libATB-dbg.a
      ATERM_LIB_PROF=libATerm-prof.a
      TOOLBUS_LIB_PROF=libATB-prof.a,)

AC_ARG_WITH(64bit,
   [  --with-64bit             create 64 bit cc version (libATerm-cc64.a)],
    CC=${CC_CC64}
    CFLAGS=${CFLAGS_CC64}
    LDFLAGS=${LDFLAGS_CC64}
    INCL=${INCL_CC64},)

JAVA_SUBDIR=
AC_ARG_WITH(java,
   [  --with-java              create Java "library" (jdk-1.2 and up).],
      JAVA_SUBDIR="java",)
AC_SUBST(JAVA_SUBDIR)


AC_SUBST(ATERM_LIB_GCC)
AC_SUBST(ATERM_LIB_CC)
AC_SUBST(ATERM_LIB_DBG)
AC_SUBST(ATERM_LIB_PROF)
AC_SUBST(ATERM_LIB_SHARED)

AC_SUBST(TOOLBUS_LIB_GCC)
AC_SUBST(TOOLBUS_LIB_CC)
AC_SUBST(TOOLBUS_LIB_DBG)
AC_SUBST(TOOLBUS_LIB_PROF)
AC_SUBST(TOOLBUS_LIB_SHARED)

AC_SUBST(XDEFS)

AC_SUBST(CC_GCC)
AC_SUBST(CC_CC)
AC_SUBST(CC_DBG)
AC_SUBST(CC_PROF)
AC_SUBST(CC_SHARED)

AC_SUBST(CFLAGS_CC)
AC_SUBST(CFLAGS_GCC)
AC_SUBST(CFLAGS_DBG)
AC_SUBST(CFLAGS_PROF)
AC_SUBST(CFLAGS_SHARED)

AC_SUBST(DEFS_CC)
AC_SUBST(DEFS_GCC)
AC_SUBST(DEFS_DBG)
AC_SUBST(DEFS_PROF)
AC_SUBST(DEFS_SHARED)

AC_SUBST(INCL_CC)
AC_SUBST(INCL_GCC)
AC_SUBST(INCL_DBG)
AC_SUBST(INCL_PROF)
AC_SUBST(INCL_SHARED)

AC_SUBST(LFLAGS_CC)
AC_SUBST(LFLAGS_GCC)
AC_SUBST(LFLAGS_DBG)
AC_SUBST(LFLAGS_PROF)
AC_SUBST(LFLAGS_SHARED)

AC_HAVE_FUNCS(strdup)

dnl Find out which libraries we need

SOCKET_FOUND=no
AC_CHECK_LIB(sun,socket,[SOCKET_FOUND=yes;LIBS="$LIBS -lsun"])
if test ${SOCKET_FOUND} = no; then
   AC_CHECK_LIB(socket, socket,[SOCKET_FOUND=yes;LIBS="$LIBS -lsocket"])
   if test ${SOCKET_FOUND} = no; then
      AC_CHECK_LIB(bsd,
                   socket,
                   [SOCKET_FOUND=yes;LIBS="$LIBS -lbsd";DEFS="$DEFS -D_BSD=43"]
)
   fi
fi

AC_CHECK_LIB(dl, dlopen)

GETHOSTNAME_FOUND=no
AC_CHECK_LIB(sun,gethostname,[GETHOSTNAME_FOUND=yes])
if test ${GETHOSTNAME_FOUND} = no; then
   AC_CHECK_LIB(nsl,gethostname,[GETHOSTNAME_FOUND=yes;LIBS="$LIBS -lnsl"])
fi

dnl Find out if we have rand48 suite
AC_CHECK_FUNCS(lrand48 srand48)

AC_OUTPUT( \
	Makefile \
	aterm/Makefile \
	utils/Makefile \
	test/Makefile \
	toolbus/Makefile \
	java/Makefile \
	java/aterm/Makefile \
	java/aterm/pure/Makefile \
	java/aterm/test/Makefile \
        java/toolbus/Makefile \
        java/toolbus/tifstojava \
	doc/Makefile \
	doc/examples/Makefile \
	doc/spec/Makefile \
	, chmod +x java/toolbus/tifstojava)
